<resources>

    <string name="app_name">BookSearch</string>

    <!-- メイン -->
    <string name="action_settings">Settings</string>
    <string name="error_toast_scanner_not_installed">Please install QR Code Scanner.</string>
    <string name="image_description_more">more</string>
    <string name="label_delete_book_from_history">Delete</string>
    <string name="snack_deleted">Deleted</string>
    <string name="snack_undo">UNDO</string>
    <string name="list_empty">Let\'s scan ISBN code.</string>

    <!-- 詳細 -->
    <string name="title_activity_item">Book Detail</string>
    <string name="label_kindle_edition_exists">Kindle</string>
    <string name="label_kindle_edition_non">Kindle</string>
    <string name="label_open_chilchil">ちるちる で開く</string>
    <string name="label_open_amazon">Open Amazon</string>
    <string name="label_open_goodreads">Open goodreads</string>
    <string name="toast_error_net">Network is unavailable.</string>
    <string name="toast_error_other">Oh no! Please try that again.</string>
    <string name="toast_error_not_isbn">This is not ISBN code.</string>

    <!-- 設定 -->
    <string name="title_activity_settings">Settings</string>
    <string name="category_settings">General</string>
    <string name="pref_title_chilchil_visible">ちるちるを表示する</string>
    <string name="category_about">About</string>
    <string name="pref_licence">Licence</string>
    <string name="category_debug">Debug</string>
    <string name="pref_insert_items">Insert items</string>
    <string name="pref_item_activity">Open ItemActivity</string>

    <!-- ライセンス -->
    <string name="title_activity_licence">Licence</string>

    <!-- バーコードキャプチャー -->
    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="title_activity_main">Barcode Reader Sample</string>
    <string name="barcode_header">Click &quot;Read Barcode&quot; to read a barcode</string>
    <string name="read_barcode">Read Barcode</string>
    <string name="auto_focus">Auto Focus</string>
    <string name="use_flash">Use Flash</string>
    <string name="barcode_success">Barcode read successfully</string>
    <string name="barcode_failure">No barcode captured</string>
    <string name="barcode_error">"Error reading barcode: %1$s"</string>
    <string name="capture_text">Scan the ISBN code.</string>

</resources>
