<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:layout_marginRight="8dp"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                tools:text="夏の塩 (SHY NOVELS)夏の塩 (SHY NOVELS)夏の塩 (SHY NOVELS)夏の塩 (SHY NOVELS)" />

            <TextView
                android:id="@+id/author_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@id/title_view"
                android:layout_gravity="right"
                android:layout_marginBottom="3dp"
                android:layout_marginRight="8dp"
                android:textColor="@color/gray_800"
                android:textSize="16sp"
                tools:text="榎田尤利" />

            <TextView
                android:id="@+id/publication_date_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@id/author_view"
                android:layout_gravity="right"
                android:layout_marginBottom="4dp"
                android:layout_marginRight="8dp"
                android:textColor="@color/gray_800"
                android:textSize="16sp"
                tools:text="2009/7/30" />

            <TextView
                android:id="@+id/kindle_exist_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/publication_date_view"
                android:background="@drawable/kindle_exist_background"
                android:text="@string/label_kindle_edition_exists"
                android:textColor="@color/orange_500"
                android:textSize="16sp"
                android:visibility="gone"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/kindle_none_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/publication_date_view"
                android:background="@drawable/kindle_none_background"
                android:text="@string/label_kindle_edition_non"
                android:textColor="@color/gray_900"
                android:textSize="16sp"
                android:visibility="gone" />

            <ImageButton
                android:id="@+id/pop_menu"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:layout_alignParentRight="true"
                android:layout_below="@id/publication_date_view"
                android:layout_gravity="right"
                android:background="@drawable/more_bg"
                android:contentDescription="@string/image_description_more" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</merge>
