<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="jp.tsur.booksearch.ui.ItemActivity">

    <data>

        <import type="android.view.View" />

        <variable
            name="activity"
            type="jp.tsur.booksearch.ui.ItemActivity" />

        <variable
            name="book"
            type="jp.tsur.booksearch.data.api.model.Book" />
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <ProgressBar
            android:id="@+id/progress_bar"
            style="@style/Widget.AppCompat.ProgressBar"
            android:layout_width="68dp"
            android:layout_height="68dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{book.title}"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="夏の塩 (SHY NOVELS)" />

        <TextView
            android:id="@+id/authors"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@{book.author}"
            android:textColor="@color/gray_800"
            android:textSize="18sp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title"
            tools:text="榎田尤利" />

        <TextView
            android:id="@+id/publication_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@{book.publicationDate}"
            android:textColor="@color/gray_800"
            android:textSize="18sp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/authors"
            tools:text="2009/7/30" />

        <TextView
            android:id="@+id/kindle_exist_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@{book.existsKindle ? @drawable/kindle_exist_background : @drawable/kindle_none_background}"
            android:text="@string/label_kindle_edition_exists"
            android:textColor="@{book.existsKindle ? @color/orange_500 : @color/gray_900}"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@id/publication_date" />

        <Button
            android:id="@+id/amazon_button"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:drawablePadding="8dp"
            android:gravity="center"
            android:onClick="@{activity.onAmazonButtonClick}"
            android:text="@string/label_open_amazon"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/white"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/kindle_exist_view" />

        <Button
            android:id="@+id/goodreads_button"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:drawablePadding="8dp"
            android:gravity="center"
            android:onClick="@{activity.onGoodreadsButtonClick}"
            android:text="@string/label_open_goodreads"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/white"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/amazon_button" />

        <Button
            android:id="@+id/chilchil_button"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:drawablePadding="8dp"
            android:gravity="center"
            android:onClick="@{activity.onChilChilButtonClick}"
            android:text="@string/label_open_chilchil"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/white"
            android:visibility="gone"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/goodreads_button"
            tools:visibility="visible" />

        <android.support.constraint.Group
            android:id="@+id/contents"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:constraint_referenced_ids="title,authors,publication_date,kindle_exist_view,amazon_button,goodreads_button,chilchil_button"
            tools:visibility="visible" />

    </android.support.constraint.ConstraintLayout>

</layout>
